@@ -21,11 +21,11 @@ class SynchronizedAxisModel(_ang: Double, length: Double, tail: Boolean, coordin
 
 class CoordinateFrameNode(val model: RampModel, coordinateSystemModel: AdjustableCoordinateModel, val transform: ModelViewTransform2D) extends PNode {
   val yAxisModel = new SynchronizedAxisModel(PI / 2, 7, false, model.coordinateFrameModel)
-  val yAxis = new AxisNodeWithModel(transform, "coordinates.y".translate, yAxisModel, coordinateSystemModel.adjustable, PI / 2, PI)
+  val yAxis = new AxisNodeWithModel(transform, "coordinates.y".translate, yAxisModel, coordinateSystemModel, PI / 2, PI)
   addChild(yAxis)
 
   val xAxisModel = new SynchronizedAxisModel(0, 7, false, model.coordinateFrameModel)
-  val xAxis = new AxisNodeWithModel(transform, "coordinates.x".translate, xAxisModel, coordinateSystemModel.adjustable, 0, PI / 2)
+  val xAxis = new AxisNodeWithModel(transform, "coordinates.x".translate, xAxisModel, coordinateSystemModel, 0, PI / 2)
   addChild(xAxis)
 
   defineInvokeAndPass(coordinateSystemModel.addListenerByName) {
